--- a/style.html
+++ b/style.html
@@ -155,11 +155,15 @@
             --card-shadow: var(--shadow-md);
             --card-radius: var(--radius-lg);
 
-            --modal-bg: var(--surface-color);
-            --modal-border: color-mix(in srgb, var(--dark-color) 6%, transparent);
-            --modal-shadow: var(--shadow-lg);
-            --modal-radius: var(--radius-lg);
-            --modal-overlay: rgba(0, 0, 0, 0.5);
+            --modal-bg: color-mix(in srgb, var(--surface-color) 96%, #ffffff 4%);
+            --modal-border: color-mix(in srgb, var(--dark-color) 10%, transparent);
+            --modal-shadow: 0 30px 80px rgba(15, 23, 42, 0.22);
+            --modal-radius: 20px;
+            --modal-overlay: color-mix(in srgb, var(--color-neutral-900) 38%, transparent);
+            --modal-overlay-blur: blur(14px);
+            --modal-header-bg: linear-gradient(180deg, color-mix(in srgb, var(--surface-color) 96%, #ffffff 4%), var(--surface-color));
+            --modal-footer-bg: color-mix(in srgb, var(--surface-color) 92%, var(--light-color) 8%);
+            --modal-divider: color-mix(in srgb, var(--dark-color) 10%, transparent);
 
             --badge-radius: var(--radius-lg);
             --badge-font-size: 0.75rem;
@@ -233,7 +237,15 @@
             --status-contingencia: #8B7AD5;
 
             --shadow-color: rgba(2, 6, 23, 0.65);
-            --modal-overlay: color-mix(in srgb, var(--color-neutral-900) 35%, transparent);
+            --modal-bg: color-mix(in srgb, var(--color-surface) 92%, var(--color-neutral-900) 8%);
+            --modal-border: color-mix(in srgb, var(--color-neutral-900) 12%, transparent);
+            --modal-shadow: 0 30px 80px rgba(0, 0, 0, 0.55);
+            --modal-radius: 20px;
+            --modal-overlay: color-mix(in srgb, var(--color-neutral-900) 45%, transparent);
+            --modal-overlay-blur: blur(12px);
+            --modal-header-bg: linear-gradient(180deg, color-mix(in srgb, var(--color-surface) 94%, var(--color-neutral-900) 6%), var(--color-surface));
+            --modal-footer-bg: color-mix(in srgb, var(--color-surface) 88%, var(--color-neutral-900) 12%);
+            --modal-divider: color-mix(in srgb, var(--color-neutral-900) 18%, transparent);
             --login-bg: linear-gradient(135deg,
                 color-mix(in srgb, var(--color-background) 85%, var(--primary-color) 15%),
                 color-mix(in srgb, var(--color-background) 90%, var(--secondary-color) 10%));
@@ -1599,18 +1611,21 @@
         .avatar-modal-backdrop {
             position: fixed;
             inset: 0;
-            background: rgba(15, 23, 42, 0.28);
+            background: var(--modal-overlay);
             z-index: var(--z-overlay);
             display: flex;
             align-items: flex-start;
             justify-content: flex-end;
             padding: 100px 40px 40px;
+            backdrop-filter: var(--modal-overlay-blur);
+            -webkit-backdrop-filter: var(--modal-overlay-blur);
         }
         .avatar-modal {
-            width: min(320px, 100%);
-            background: var(--surface-color);
-            border-radius: 16px;
-            box-shadow: 0 20px 45px rgba(15, 23, 42, 0.18);
+            width: min(340px, 100%);
+            background: var(--modal-bg);
+            border-radius: var(--modal-radius);
+            box-shadow: var(--modal-shadow);
+            border: 1px solid var(--modal-divider);
             padding: 18px;
             display: flex;
             flex-direction: column;
@@ -1626,21 +1641,26 @@
         .avatar-modal-title {
             font-size: 1.05rem;
             font-weight: 600;
-            color: var(--dark-color);
+            color: var(--text-color);
         }
         .avatar-modal-close {
-            background: none;
-            border: none;
+            background: color-mix(in srgb, var(--surface-color) 80%, var(--light-color) 20%);
+            border: 1px solid color-mix(in srgb, var(--dark-color) 12%, transparent);
             color: var(--muted-color);
-            font-size: 1.1rem;
+            font-size: 1rem;
             cursor: pointer;
-            padding: 4px;
-            border-radius: 50%;
-            transition: background-color 0.2s ease, color 0.2s ease;
+            width: 32px;
+            height: 32px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 999px;
+            transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 6px 16px rgba(15, 23, 42, 0.1);
         }
         .avatar-modal-close:hover,
         .avatar-modal-close:focus-visible {
-            background-color: color-mix(in srgb, var(--light-color) 70%, white 30%);
+            background-color: color-mix(in srgb, var(--surface-color) 70%, var(--light-color) 30%);
             color: var(--primary-dark);
             outline: none;
         }
@@ -2851,59 +2871,74 @@
         .modal {
             display: none;
             position: fixed;
-            top: 0;
-            left: 0;
+            inset: 0;
             width: 100%;
             height: 100%;
             background-color: var(--modal-overlay);
             z-index: var(--z-modal-overlay);
             align-items: center;
             justify-content: center;
+            padding: 20px;
+            backdrop-filter: var(--modal-overlay-blur);
+            -webkit-backdrop-filter: var(--modal-overlay-blur);
         }
         .modal-content {
-            background-color: var(--modal-bg);
+            background: var(--modal-bg);
             border-radius: var(--modal-radius);
-            width: 90%;
-            max-width: 500px;
+            width: min(100%, 560px);
             box-shadow: var(--modal-shadow);
-            border: 1px solid var(--modal-border);
-            max-height: calc(100vh - 32px);
+            border: 1px solid var(--modal-divider);
+            max-height: calc(100vh - 40px);
             display: flex;
             flex-direction: column;
             overflow: hidden;
             position: relative;
         }
         .modal-header {
-            padding: var(--space-4) var(--space-5);
-            border-bottom: 1px solid var(--modal-border);
+            padding: 20px 24px;
+            border-bottom: 1px solid var(--modal-divider);
             display: flex;
             justify-content: space-between;
             align-items: center;
+            gap: 12px;
+            background: var(--modal-header-bg);
         }
         .modal-title {
-            font-size: 1.2rem;
+            font-size: 1.25rem;
             font-weight: 600;
+            letter-spacing: -0.01em;
             color: var(--text-color);
         }
         .modal-close {
-            background: none;
-            border: none;
-            font-size: 1.5rem;
+            background: color-mix(in srgb, var(--surface-color) 80%, var(--light-color) 20%);
+            border: 1px solid color-mix(in srgb, var(--dark-color) 12%, transparent);
+            width: 36px;
+            height: 36px;
+            border-radius: 999px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.1rem;
             cursor: pointer;
             color: var(--muted-color);
-            transition: color 0.2s ease;
+            transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 6px 18px rgba(15, 23, 42, 0.12);
         }
-        .modal-close:hover {
+        .modal-close:hover,
+        .modal-close:focus-visible {
             color: var(--text-color);
+            background-color: color-mix(in srgb, var(--surface-color) 70%, var(--light-color) 30%);
+            outline: none;
         }
         .modal-body {
-            padding: var(--space-5);
+            padding: 24px;
             overflow-y: auto;
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 14px;
             flex: 1;
             min-height: 0;
+            color: var(--text-color);
         }
         .modal-body form {
             display: flex;
@@ -2925,6 +2960,7 @@
             max-height: 95vh;
             display: flex;
             flex-direction: column;
+            border-radius: calc(var(--modal-radius) + 4px);
         }
         .modal-scrollable {
             overflow-y: auto;
@@ -2934,11 +2970,11 @@
         .modal .form-actions {
             position: sticky;
             bottom: 0;
-            background: linear-gradient(180deg, transparent 0%, var(--modal-bg) 18%);
+            background: linear-gradient(180deg, transparent 0%, var(--modal-footer-bg) 30%);
             padding-top: 14px;
             padding-bottom: calc(12px + env(safe-area-inset-bottom, 0px));
             margin-top: auto;
-            border-top: 1px solid var(--modal-border);
+            border-top: 1px solid var(--modal-divider);
         }
         .mov-signature-wrapper .form-actions {
             background: transparent;
@@ -2951,21 +2987,28 @@
             display: flex;
             justify-content: flex-end;
             gap: 12px;
-            padding: var(--space-4) var(--space-5);
-            border-top: 1px solid var(--modal-border);
-            background: var(--table-header-bg);
+            padding: 16px 24px;
+            border-top: 1px solid var(--modal-divider);
+            background: var(--modal-footer-bg);
         }
         .modal-actions .btn-primary {
             min-width: 140px;
         }
         @media (max-width: 640px) {
+            .modal {
+                padding: 12px;
+            }
             .modal-content {
-                width: 96%;
-                max-width: 96%;
-                max-height: calc(100vh - 20px);
+                width: 100%;
+                max-width: 100%;
+                max-height: calc(100vh - 24px);
+                border-radius: 18px;
+            }
+            .modal-header {
+                padding: 16px 18px;
             }
             .modal-body {
-                padding: 16px;
+                padding: 16px 18px;
             }
             .prontuario-input-group {
                 flex-direction: column;
@@ -2976,6 +3019,7 @@
             }
             .modal-actions {
                 flex-direction: column-reverse;
+                padding: 16px 18px;
             }
             .modal-actions .btn {
                 width: 100%;
