Fix profile selector dropdown stacking

--- a/style.html
+++ b/style.html
@@ -1198,6 +1198,8 @@
             order: 0;
             flex-shrink: 0;
             margin-left: auto;
+            position: relative;
+            z-index: var(--z-dropdown);
         }
         .header-actions {
             display: flex;
