--- a/style.html
+++ b/style.html
@@ -205,8 +205,8 @@
             --z-sidebar: 120;
             --z-header: 200;
             --z-dropdown: 920;
-            --z-modal-overlay: 840;
-            --z-modal-content: 850;
+            --z-modal-overlay: 1040;
+            --z-modal-content: 1050;
             --z-overlay: 1100;
             --z-critical-overlay: 1200;
             --z-alert: 1250;
@@ -1198,6 +1198,8 @@
             order: 0;
             flex-shrink: 0;
             margin-left: auto;
+            position: relative;
+            z-index: var(--z-dropdown);
         }
         .header-actions {
             display: flex;
@@ -5480,6 +5482,13 @@
             .selector-trigger-description {
                 white-space: normal;
                 line-height: 1.25;
+            }
+            .avatar-modal-backdrop {
+                padding: 80px 16px 24px;
+                justify-content: center;
+            }
+            .avatar-modal {
+                width: min(360px, 100%);
             }
             .selector-control {
                 padding: 12px;
