Fix profile selector stacking over unit button

--- a/style.html
+++ b/style.html
@@ -962,6 +962,7 @@
         .selector-control:focus-within {
             border-color: var(--primary-color);
             box-shadow: 0 0 0 4px var(--focus-ring);
+            z-index: calc(var(--z-dropdown) + 1);
         }
         .selector-icon {
             color: var(--primary-color);
