--- a/style.html
+++ b/style.html
@@ -46,6 +46,12 @@
             --border-color: var(--color-neutral-200);
             --shadow-color: rgba(15, 23, 42, 0.08);
             --sidebar-width-collapsed: 88px;
+            --sidebar-bg: linear-gradient(180deg, #0e2f63, color-mix(in srgb, #010814 78%, #133f82));
+            --sidebar-border-color: rgba(255,255,255,0.1);
+            --sidebar-menu-hover-bg: color-mix(in srgb, white 18%, transparent);
+            --sidebar-menu-active-bg: color-mix(in srgb, white 22%, transparent);
+            --sidebar-logout-bg: rgba(255,255,255,0.1);
+            --sidebar-logout-border: rgba(255,255,255,0.2);
 
             /* Typography */
             --font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
@@ -255,6 +261,56 @@
             --login-input-bg: color-mix(in srgb, var(--color-surface) 88%, var(--color-background) 12%);
             --login-feedback-bg: color-mix(in srgb, var(--color-background) 70%, transparent);
             --login-logo-filter: brightness(0) invert(1);
+        }
+        [data-theme="pink"] {
+            --color-primary-500: #D277A3;
+            --color-primary-600: #B85C8E;
+            --color-secondary-500: #E2A9C4;
+            --color-success-500: #65B193;
+            --color-warning-500: #D68B42;
+            --color-danger-500: #C6596F;
+            --color-danger-600: #9E3F56;
+
+            --color-neutral-0: #FFFFFF;
+            --color-neutral-50: #FFF7FB;
+            --color-neutral-100: #FCECF3;
+            --color-neutral-200: #F5D6E4;
+            --color-neutral-500: #7C6A75;
+            --color-neutral-700: #3D2E36;
+            --color-neutral-900: #271820;
+            --color-surface: #FFFBFD;
+            --color-background: #FFF5FA;
+
+            --status-livre: #5DAA8D;
+            --status-em-uso: #D98FB1;
+            --status-proximo: #D68B42;
+            --status-vencido: #C6596F;
+            --status-contingencia: #7D5AA8;
+
+            --shadow-color: rgba(61, 46, 54, 0.12);
+            --modal-bg: color-mix(in srgb, var(--color-surface) 96%, #ffffff 4%);
+            --modal-border: color-mix(in srgb, var(--color-neutral-900) 10%, transparent);
+            --modal-shadow: 0 30px 80px rgba(39, 24, 32, 0.18);
+            --modal-overlay: color-mix(in srgb, var(--color-neutral-900) 32%, transparent);
+            --modal-header-bg: linear-gradient(180deg, color-mix(in srgb, var(--color-surface) 96%, #ffffff 4%), var(--color-surface));
+            --modal-footer-bg: color-mix(in srgb, var(--color-surface) 92%, var(--color-neutral-100) 8%);
+            --modal-divider: color-mix(in srgb, var(--color-neutral-900) 12%, transparent);
+            --login-bg: linear-gradient(135deg,
+                color-mix(in srgb, var(--color-background) 88%, var(--primary-color) 12%),
+                color-mix(in srgb, var(--color-background) 92%, var(--secondary-color) 8%));
+            --login-card-bg: var(--color-surface);
+            --login-subtitle: var(--color-neutral-900);
+            --login-label: var(--muted-color);
+            --login-input-bg: color-mix(in srgb, var(--color-surface) 90%, var(--color-neutral-100) 10%);
+            --login-feedback-bg: color-mix(in srgb, var(--color-background) 78%, transparent);
+            --login-logo-filter: none;
+
+            --sidebar-bg: linear-gradient(180deg, #7A2A5A, color-mix(in srgb, #2B0B1C 78%, #8E2E63));
+            --sidebar-border-color: rgba(255,255,255,0.14);
+            --sidebar-menu-hover-bg: color-mix(in srgb, white 14%, transparent);
+            --sidebar-menu-active-bg: color-mix(in srgb, white 20%, transparent);
+            --sidebar-logout-bg: rgba(255,255,255,0.12);
+            --sidebar-logout-border: rgba(255,255,255,0.28);
         }
 
         /* Achados e Perdidos */
@@ -644,7 +700,7 @@
         /* Sidebar */
         .sidebar {
             width: var(--sidebar-width);
-            background: linear-gradient(180deg, #0e2f63, color-mix(in srgb, #010814 78%, #133f82));
+            background: var(--sidebar-bg);
             color: white;
             height: 100vh;
             position: fixed;
@@ -657,7 +713,7 @@
         .sidebar-header {
             padding: 24px 20px 20px;
             text-align: center;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
+            border-bottom: 1px solid var(--sidebar-border-color);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -736,11 +792,11 @@
             position: relative;
         }
         .sidebar-menu a:hover {
-            background-color: color-mix(in srgb, white 18%, transparent);
+            background-color: var(--sidebar-menu-hover-bg);
             border-left-color: var(--light-color);
         }
         .sidebar-menu a.active {
-            background-color: color-mix(in srgb, white 22%, transparent);
+            background-color: var(--sidebar-menu-active-bg);
             border-left-color: var(--light-color);
             font-weight: 500;
         }
@@ -757,7 +813,7 @@
         .sidebar-footer {
             margin-top: auto;
             padding: 20px;
-            border-top: 1px solid rgba(255,255,255,0.1);
+            border-top: 1px solid var(--sidebar-border-color);
             width: 100%;
             align-self: stretch;
         }
@@ -769,8 +825,8 @@
             gap: 10px;
             padding: 12px 16px;
             border-radius: 10px;
-            border: 1px solid rgba(255,255,255,0.2);
-            background: rgba(255,255,255,0.1);
+            border: 1px solid var(--sidebar-logout-border);
+            background: var(--sidebar-logout-bg);
             color: white;
             font-size: 0.95rem;
             cursor: pointer;
