--- a/style.html
+++ b/style.html
@@ -263,28 +263,28 @@
             --login-logo-filter: brightness(0) invert(1);
         }
         [data-theme="pink"] {
-            --color-primary-500: #D277A3;
-            --color-primary-600: #B85C8E;
-            --color-secondary-500: #E2A9C4;
+            --color-primary-500: #C98AAD;
+            --color-primary-600: #A9688B;
+            --color-secondary-500: #DDB6C9;
             --color-success-500: #65B193;
             --color-warning-500: #D68B42;
-            --color-danger-500: #C6596F;
-            --color-danger-600: #9E3F56;
+            --color-danger-500: #C06D7D;
+            --color-danger-600: #9C4F5E;
 
             --color-neutral-0: #FFFFFF;
-            --color-neutral-50: #FFF7FB;
-            --color-neutral-100: #FCECF3;
-            --color-neutral-200: #F5D6E4;
+            --color-neutral-50: #F9FAFB;
+            --color-neutral-100: #F3F4F6;
+            --color-neutral-200: #E5E7EB;
             --color-neutral-500: #7C6A75;
             --color-neutral-700: #3D2E36;
             --color-neutral-900: #271820;
-            --color-surface: #FFFBFD;
-            --color-background: #FFF5FA;
+            --color-surface: #FFFFFF;
+            --color-background: #F9FAFB;
 
             --status-livre: #5DAA8D;
-            --status-em-uso: #D98FB1;
+            --status-em-uso: #CFA0B6;
             --status-proximo: #D68B42;
-            --status-vencido: #C6596F;
+            --status-vencido: #C06D7D;
             --status-contingencia: #7D5AA8;
 
             --shadow-color: rgba(61, 46, 54, 0.12);
@@ -305,7 +305,7 @@
             --login-feedback-bg: color-mix(in srgb, var(--color-background) 78%, transparent);
             --login-logo-filter: none;
 
-            --sidebar-bg: linear-gradient(180deg, #7A2A5A, color-mix(in srgb, #2B0B1C 78%, #8E2E63));
+            --sidebar-bg: linear-gradient(180deg, #7B3B5F, color-mix(in srgb, #3A1625 78%, #8C3A68));
             --sidebar-border-color: rgba(255,255,255,0.14);
             --sidebar-menu-hover-bg: color-mix(in srgb, white 14%, transparent);
             --sidebar-menu-active-bg: color-mix(in srgb, white 20%, transparent);
