Fix theme toggle icon to match active theme

--- a/script.html
+++ b/script.html
@@ -225,9 +225,9 @@
                 pink: 'Ativar tema claro'
             };
             const iconMap = {
-                light: 'fas fa-moon',
-                dark: 'fas fa-heart',
-                pink: 'fas fa-sun'
+                light: 'fas fa-sun',
+                dark: 'fas fa-moon',
+                pink: 'fas fa-heart'
             };
             if (icone) {
                 icone.className = iconMap[temaAtual] || 'fas fa-moon';
