Fix dark theme header greeting color

--- a/style.html
+++ b/style.html
@@ -945,6 +945,10 @@
             background: color-mix(in srgb, var(--primary-color) 18%, var(--surface-color) 82%);
             color: var(--primary-dark);
         }
+        [data-theme="dark"] .greeting-role,
+        [data-theme="dark"] .greeting-shift {
+            color: var(--color-neutral-0);
+        }
         .header-selectors {
             display: flex;
             align-items: stretch;
